Merge branch 'architectury-1.17.1' into architectury-1.16.5
# Conflicts:
#	common/src/main/java/com/unlikepaladin/pfm/blocks/models/ModelHelper.java